Refactor: changed file structure to make it easier to navigate through files